[package]
authors = ["SethDusek <shibe@openmailbox.org>"]
name = "iron_blog"
version = "0.1.0"

[dependencies]
diesel = "*"
diesel_codegen = "*"
dotenv = "0.10.0"
iron = "*"
lazy_static = "0.2.0"
regex = "0.1.65"
time = "0.1.35"

[dependencies.mustache]
git = "https://github.com/nickel-org/rust-mustache.git"

[dependencies.pulldown-cmark]
git = "https://github.com/google/pulldown-cmark.git"

