[package]
authors = ["SethDusek <shibe@openmailbox.org>"]
name = "iron_blog"
version = "0.1.0"

[dependencies]
dotenv = "0.10.0"
time = "0.1.35"

[dependencies.diesel]
features = ["postgres"]
version = "0.13.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.13.0"

[dependencies.mustache]
git = "https://github.com/nickel-org/rust-mustache.git"

[dependencies.pulldown-cmark]
git = "https://github.com/google/pulldown-cmark.git"

